implemented custom ROS msg to publish the camera and the relative points

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,8 +5,9 @@ project(gamesh_bridge)
 ## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
 ## is used, also find other catkin packages
 find_package(catkin REQUIRED COMPONENTS
-  geometry_msgs nav_msgs geometry_msgs roscpp sensor_msgs std_msgs tf
-  pcl_conversions pcl_msgs
+	roscpp std_msgs geometry_msgs sensor_msgs nav_msgs tf
+	pcl_conversions pcl_msgs
+	message_generation
 )
 
 ## System dependencies are found with CMake's conventions
@@ -26,49 +27,50 @@ find_package(PCL REQUIRED)
 ## To declare and build messages, services or actions from within this
 ## package, follow these steps:
 ## * Let MSG_DEP_SET be the set of packages whose message types you use in
-##   your messages/services/actions (e.g. std_msgs, actionlib_msgs, ...).
+##	 your messages/services/actions (e.g. std_msgs, actionlib_msgs, ...).
 ## * In the file package.xml:
-##   * add a build_depend tag for "message_generation"
-##   * add a build_depend and a run_depend tag for each package in MSG_DEP_SET
-##   * If MSG_DEP_SET isn't empty the following dependency has been pulled in
-##     but can be declared for certainty nonetheless:
-##     * add a run_depend tag for "message_runtime"
+##	 * add a build_depend tag for "message_generation"
+##	 * add a build_depend and a run_depend tag for each package in MSG_DEP_SET
+##	 * If MSG_DEP_SET isn't empty the following dependency has been pulled in
+##		 but can be declared for certainty nonetheless:
+##		 * add a run_depend tag for "message_runtime"
 ## * In this file (CMakeLists.txt):
-##   * add "message_generation" and every package in MSG_DEP_SET to
-##     find_package(catkin REQUIRED COMPONENTS ...)
-##   * add "message_runtime" and every package in MSG_DEP_SET to
-##     catkin_package(CATKIN_DEPENDS ...)
-##   * uncomment the add_*_files sections below as needed
-##     and list every .msg/.srv/.action file to be processed
-##   * uncomment the generate_messages entry below
-##   * add every package in MSG_DEP_SET to generate_messages(DEPENDENCIES ...)
+##	 * add "message_generation" and every package in MSG_DEP_SET to
+##		 find_package(catkin REQUIRED COMPONENTS ...)
+##	 * add "message_runtime" and every package in MSG_DEP_SET to
+##		 catkin_package(CATKIN_DEPENDS ...)
+##	 * uncomment the add_*_files sections below as needed
+##		 and list every .msg/.srv/.action file to be processed
+##	 * uncomment the generate_messages entry below
+##	 * add every package in MSG_DEP_SET to generate_messages(DEPENDENCIES ...)
 
 ## Generate messages in the 'msg' folder
-# add_message_files(
-#   FILES
-#   Message1.msg
-#   Message2.msg
-# )
+add_message_files(
+	FILES
+		GameshRays.msg
+)
 
 ## Generate services in the 'srv' folder
 # add_service_files(
-#   FILES
-#   Service1.srv
-#   Service2.srv
+#	 FILES
+#	 Service1.srv
+#	 Service2.srv
 # )
 
 ## Generate actions in the 'action' folder
 # add_action_files(
-#   FILES
-#   Action1.action
-#   Action2.action
+#	 FILES
+#	 Action1.action
+#	 Action2.action
 # )
 
 ## Generate added messages and services with any dependencies listed here
-# generate_messages(
-#   DEPENDENCIES
-#   std_msgs  # Or other packages containing msgs
-# )
+generate_messages(
+	DEPENDENCIES
+		std_msgs
+		geometry_msgs
+		sensor_msgs
+)
 
 
 # # # # generate_messages(DEPENDENCIES std_msgs )
@@ -80,17 +82,17 @@ find_package(PCL REQUIRED)
 ## To declare and build dynamic reconfigure parameters within this
 ## package, follow these steps:
 ## * In the file package.xml:
-##   * add a build_depend and a run_depend tag for "dynamic_reconfigure"
+##	 * add a build_depend and a run_depend tag for "dynamic_reconfigure"
 ## * In this file (CMakeLists.txt):
-##   * add "dynamic_reconfigure" to
-##     find_package(catkin REQUIRED COMPONENTS ...)
-##   * uncomment the "generate_dynamic_reconfigure_options" section below
-##     and list every .cfg file to be processed
+##	 * add "dynamic_reconfigure" to
+##		 find_package(catkin REQUIRED COMPONENTS ...)
+##	 * uncomment the "generate_dynamic_reconfigure_options" section below
+##		 and list every .cfg file to be processed
 
 ## Generate dynamic reconfigure parameters in the 'cfg' folder
 # generate_dynamic_reconfigure_options(
-#   cfg/DynReconf1.cfg
-#   cfg/DynReconf2.cfg
+#	 cfg/DynReconf1.cfg
+#	 cfg/DynReconf2.cfg
 # )
 
 ###################################
@@ -103,18 +105,19 @@ find_package(PCL REQUIRED)
 ## CATKIN_DEPENDS: catkin_packages dependent projects also need
 ## DEPENDS: system dependencies of this project that dependent projects also need
 catkin_package(
-  INCLUDE_DIRS include
-  LIBRARIES
-	gamesh_bridge
-	pcl_ros_filters
-	pcl_ros_io
-	pcl_ros_tf
-  CATKIN_DEPENDS
-  	roscpp
-	pcl_conversions
-	pcl_msgs
-  DEPENDS 
-  	PCL
+	INCLUDE_DIRS include
+	LIBRARIES
+		gamesh_bridge
+		pcl_ros_filters
+		pcl_ros_io
+		pcl_ros_tf
+	CATKIN_DEPENDS
+		roscpp
+		pcl_conversions
+		pcl_msgs
+		message_runtime
+	DEPENDS 
+		PCL
 )
 
 ###########
@@ -125,7 +128,7 @@ catkin_package(
 ## Your package locations should be listed before other locations
 # include_directories(include)
 # include_directories(
-#   ${catkin_INCLUDE_DIRS}
+#	 ${catkin_INCLUDE_DIRS}
 # )
 
 
@@ -133,7 +136,7 @@ include_directories(include ${catkin_INCLUDE_DIRS} ${PCL_INCLUDE_DIRS})
 
 ## Declare a C++ library
 # add_library(gamesh_bridge
-#   src/${PROJECT_NAME}/gamesh_bridge.cpp
+#	 src/${PROJECT_NAME}/gamesh_bridge.cpp
 # )
 
 ## Add cmake target dependencies of the library
@@ -150,7 +153,7 @@ add_executable(gamesh_bridge_node src/gamesh_bridge_node.cpp)
 
 ## Specify libraries to link a library or executable target against
 target_link_libraries(gamesh_bridge_node
-  ${catkin_LIBRARIES} ${PCL_LIBRARIES}
+	${catkin_LIBRARIES} ${PCL_LIBRARIES}
 )
 
 #############
@@ -163,29 +166,29 @@ target_link_libraries(gamesh_bridge_node
 ## Mark executable scripts (Python etc.) for installation
 ## in contrast to setup.py, you can choose the destination
 # install(PROGRAMS
-#   scripts/my_python_script
-#   DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
+#	 scripts/my_python_script
+#	 DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
 # )
 
 ## Mark executables and/or libraries for installation
 # install(TARGETS gamesh_bridge gamesh_bridge_node
-#   ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
-#   LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
-#   RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
+#	 ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
+#	 LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
+#	 RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
 # )
 
 ## Mark cpp header files for installation
 # install(DIRECTORY include/${PROJECT_NAME}/
-#   DESTINATION ${CATKIN_PACKAGE_INCLUDE_DESTINATION}
-#   FILES_MATCHING PATTERN "*.h"
-#   PATTERN ".svn" EXCLUDE
+#	 DESTINATION ${CATKIN_PACKAGE_INCLUDE_DESTINATION}
+#	 FILES_MATCHING PATTERN "*.h"
+#	 PATTERN ".svn" EXCLUDE
 # )
 
 ## Mark other files for installation (e.g. launch and bag files, etc.)
 # install(FILES
-#   # myfile1
-#   # myfile2
-#   DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
+#	 # myfile1
+#	 # myfile2
+#	 DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
 # )
 
 #############
@@ -195,8 +198,8 @@ target_link_libraries(gamesh_bridge_node
 ## Add gtest based cpp test target and link libraries
 # catkin_add_gtest(${PROJECT_NAME}-test test/test_gamesh_bridge.cpp)
 # if(TARGET ${PROJECT_NAME}-test)
-#   target_link_libraries(${PROJECT_NAME}-test ${PROJECT_NAME})
+#	 target_link_libraries(${PROJECT_NAME}-test ${PROJECT_NAME})
 # endif()
 
 ## Add folders to be run by python nosetests
-# catkin_add_nosetests(test)
+# catkin_add_nosetests(test)	 
